feat(base): creates project base and server

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,7 @@ node_js:
   - 6.11.1
 env:
   - NODE_ENV="test"
-before_script:
-	- yarn db:setup:user
-	- yarn db:reset
 script:
-	- yarn test
-	- yarn lint
-  - yarn enforce
-  # - npm test
-  # # - npm run enforce
-  # - npm run lint
+  - npm test
+  - npm run enforce
+  - npm run lint
