--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "start": "nodemon --ignore test/"
   },
   "dependencies": {
-    "hapi": "16.6.1"
+    "bookshelf": "^0.14.2",
+    "hapi": "16.6.1",
+    "knex": "^0.16.3",
+    "pg": "^7.7.1"
   }
 }
