--- a/package.json
+++ b/package.json
@@ -32,9 +32,6 @@
     "db:seed": "yarn db:reset && knex seed:run --knexfile db/index.js"
   },
   "dependencies": {
-    "bookshelf": "^0.14.2",
-    "hapi": "16.6.1",
-    "knex": "^0.16.3",
-    "pg": "^7.7.1"
+    "hapi": "16.6.1"
   }
 }
