--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "bookshelf": "^0.14.2",
     "hapi": "16.6.1",
+    "hapi-bookshelf-serializer": "2.1.0",
     "knex": "^0.16.3",
     "pg": "^7.7.1"
   }
