--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint": "^1.9.0",
     "eslint-config-lob": "^2.0.0",
     "generate-changelog": "^1.0.0",
-    "istanbul": "^0.4.2",
+    "istanbul": "1.1.0-alpha.1",
     "mocha": "^2.2.5",
     "nodemon": "^1.18.9"
   },
